// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup correctly sets "checked" attribute 1`] = `
<div
  className="dk-checkbox-group"
>
  <label
    className="dk-checkbox dk-checkbox-group-item"
  >
    <input
      checked={false}
      className="dk-checkbox-input"
      onChange={[Function]}
      type="checkbox"
      value="1"
    />
    <i
      className="dk-checkbox-indicator"
    />
  </label>
  <label
    className="dk-checkbox dk-checkbox-group-item"
  >
    <input
      checked={false}
      className="dk-checkbox-input"
      onChange={[Function]}
      type="checkbox"
      value="3"
    />
    <i
      className="dk-checkbox-indicator"
    />
  </label>
</div>
`;

exports[`CheckboxGroup renders correctly when deeply nested 1`] = `
<div
  className="dk-checkbox-group"
>
  <div>
    <div>
      <label
        className="dk-checkbox dk-checkbox-group-item"
      >
        <input
          checked={false}
          className="dk-checkbox-input"
          onChange={[Function]}
          type="checkbox"
          value="1"
        />
        <i
          className="dk-checkbox-indicator"
        />
      </label>
      <label
        className="dk-checkbox dk-checkbox-group-item"
      >
        <input
          checked={false}
          className="dk-checkbox-input"
          onChange={[Function]}
          type="checkbox"
          value="3"
        />
        <i
          className="dk-checkbox-indicator"
        />
      </label>
    </div>
  </div>
</div>
`;
